@@ -1,3 +1,8 @@
+[B]Version 2.3.0[/B]
+
+- Added Authentification script for other addons
+
+
 [B]Version 2.2.0[/B]
 
 - dropbox v2.2.0
